// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <MainLogo /> should renders when the role of doctor 1`] = `
<div
  className="wrap-logo"
>
  <div
    className="logo"
  >
    <div
      className="logo-icon"
    >
      <a
        href="/"
        onClick={[Function]}
      >
        <img
          alt="logo"
          className="img"
          src="testLogo"
        />
      </a>
    </div>
  </div>
</div>
`;

exports[`Component <MainLogo /> should renders when the role of the patient 1`] = `
<div
  className="wrap-logo"
>
  <div
    className="logo"
  >
    <div
      className="logo-icon"
    >
      <a
        href="/patients/9999999000/patients-summary"
        onClick={[Function]}
      >
        <img
          alt="logo"
          className="img"
          src="testLogo"
        />
      </a>
    </div>
  </div>
</div>
`;

exports[`Component <MainLogo /> should renders without role 1`] = `
<div
  className="wrap-logo"
>
  <div
    className="logo"
  >
    <div
      className="logo-icon"
    />
  </div>
</div>
`;
